# web_balancer

./: README.md
test/: main.cpp
web_balancer/: Balancer.cpp  Balancer.hpp  BalancerBuilder.hpp  CMakeLists.txt  Config.hpp  Config.json  IConfig.hpp  ServersPool.cpp  ServersPool.hpp  Timestamp.hpp  main.cpp
